<resources>
    <string name="app_name">Ag视讯</string>
    <string name="see">查看更多</string>
    <string name="Open" />
    <string name="Close" />
    <string name="csl">中国超级联赛</string>
    <string name="csldesc">中国足球协会超级联赛（CSL），由于赞助原因，现称为中国平安中国足球协会超级联赛，是中国职业足球联赛中最高的级别，由中国足球协会（CFA）赞助。
\n
中国超级联赛是由前顶级联赛中国足协甲A联赛于2004年更名而创建的（请参阅中国甲A联赛，不要与中国足协甲乙联赛相混淆，后者是当前的二线联赛)。
\n
最初是在成立之初由12支球队竞争，但此后联盟不断扩展，到2020赛季有16支球队参赛。自成立以来，共有32支队伍参加了CSL比赛，其中8支获得了冠军：广州（八支），山东泰山（三支），深圳，大连实德，长春亚泰，北京国安，上海港和江苏（所有一个标题）。目前的超级联赛冠军是江苏人，他们获得了2020年的冠军。
\n
中国超级联赛是中国最受欢迎的职业体育联赛之一，2018赛季联赛平均出勤24,107人。这是世界上所有国内职业体育联盟中排名第十二的高校，也是世界上职业协会足球联盟中排名第六的高校，仅次于德甲联赛，英超联赛，西甲联赛，意甲联赛和西甲MX联赛。
\n
联赛目前在中国足球协会的授权下进行，CSL公司（目前是联赛的商业分支）是由CFA和所有会员俱乐部担任股东的公司。计划CFA最终将其CSL公司的股份转让给俱乐部，由CSL俱乐部组成的专业联盟将被建立为联盟的管理实体。</string>


    <string name="footballtitle">足球</string>
    <string name="footballdesc">足球（足球）是世界上最古老的运动之一。它也是最知名的之一。国际足球的巅峰之作是以足球世界杯的形式出现。也有诸如欧洲锦标赛，美洲杯和非洲国家杯这样的比赛。国内最强的联赛来自英格兰（英超），西班牙（西甲），意大利（意甲）和德国（德甲）。在世界某些地方，这项运动也被称为足球。</string>

    <string name="rules">足球规则</string>
    <string name="rulesdesc">• 一场比赛由两个45分钟的半场组成，中间有15分钟的休息时间。 \n\n
    • 每支球队最少可以有11名球员（包括1名守门员，这是唯一允许在18码箱子内处理球的球员），并且至少需要7名球员才能构成比赛。 \n\n
    • 田地必须由人造草或天然草制成。间距的大小可以变化，但必须在100-130码长和50-100码宽之间。球场周围还必须在矩形上标出矩形，以显示界外，两个六个码箱，两个18码箱和一个中心圆。还必须可见一个位于球门和中心圆圈外12码处的点球点。\n\n
    • 球的周长必须为58-61厘米，并且必须是圆形。 \n\n
    • 每支球队最多可以任命7名替补球员。比赛可以随时进行换人，每队最多可以换人3次。如果所有三个替补球员都出场，并且一名球员不得不离开场上受伤，则该队将被迫参加比赛，而该球员没有替补球员。 \n\n
    • 每场比赛必须包括一名裁判和两名助理裁判（巡边员）。裁判员的职责是担任计时员，并做出可能需要做出的任何决定，例如犯规，任意球，罚球，罚球和在每半场结束时按时加班。裁判可以在比赛中的任何时候咨询助理裁判以做出决定。助理裁判的工作是在比赛中发现越位（见下文），为任一支球队提供助攻，并在适当的情况下协助裁判进行所有决策过程。 \n\n
    • 如果由于两支球队比赛中的比赛而导致比赛需要额外的时间，则在分配的90分钟后，将以两个15分钟的一半减半的形式添加30分钟。 \n\n
    • 如果经过加时赛后球队仍然保持水平，则必须进行点球大战。 \n\n
    • 整个球必须越过球门线才能构成球门。 \n\n
    • 对于犯规行为，球员可以根据犯规的严重程度获得黄牌或红牌。这取决于裁判的自由裁量权。黄色是警告，而红牌是该球员的解雇。两张黄牌等于一张红牌。播放器一旦被遣散，便无法替换。 \n\n
    • 如果一个球在任一边线中都没有越过对手，则将其作为掷界外球。如果该球在底线中没有从进攻方球员中脱离而出，则为球门球。如果它从防守队员身上摔下来，那将是一个角球。 
    </string>

    <string name="objective">游戏对象</string>
    <string name="objectivedesc">足球的目标是在90分钟的比赛时间内比对手赢得更多进球。比赛分为45分钟的两半。在开始的45分钟之后，玩家将需要15分钟的休息时间，即半场休息时间。第二45分钟将恢复，裁判认为适合的任何时间（受伤时间）也将相应延长。</string>

    <string name="playersequip">播放器和设备</string>
    <string name="playersequipdesc">每个团队由11名球员组成。他们由一名守门员和十名外场球员组成。球场的尺寸因地面而异，但长约120码，宽约75码。在每个球场上，您将在球门口旁边有一个6码的盒子，在6码的盒子周围有一个18码的盒子，以及一个中心圆。间距的每一半必须在尺寸上是另一半的镜像。
\n\n
基本上，足球比赛所需的设备是球场和足球。另外，可以发现球员穿着带钉钉足球鞋，护腿板和相配的带子。守门员将另外戴上带衬垫的手套，因为它们是唯一允许处理球的球员。每个团队都有一个指定的队长。</string>

    <string name="scoring">计分</string>
    <string name="scoringdesc">要得分，必须进入对手的球门。整个球都需要越过界限，才能使其成为一个合法的目标。一个目标可以从身体的任何部分（手或手臂到肩膀）得分。球门本身包括一个高8英尺，宽8码的框架。</string>
</resources>