<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginTop="55dp">
    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="160dp"-->
    <!--        android:scaleType="fitXY"-->
    <!--        android:src="@drawable/banner2"-->
    <!--        android:id="@+id/awd"/>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/objective"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:maxLines="4"
                        android:text="@string/objectivedesc"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:id="@+id/objectbtn"
                        android:text="@string/see"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/playersequip"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:maxLines="4"
                        android:text="@string/playersequipdesc"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:id="@+id/playerbtn"
                        android:text="@string/see"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/scoring"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:maxLines="4"
                        android:text="@string/scoringdesc"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:id="@+id/scoringbtn"
                        android:text="@string/see"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="left"
                            android:text="@string/rules"
                            android:textColor="#000000"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:maxLines="4"
                        android:text="@string/rulesdesc"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:id="@+id/rulesbtn"
                        android:text="@string/see"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>