<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginTop="55dp">
<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="160dp"-->
<!--        android:scaleType="fitXY"-->
<!--        android:src="@drawable/banner2"-->
<!--        android:id="@+id/awd"/>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/iconRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="left"
                            android:text="@string/footballtitle"
                            android:textColor="#000000"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/footballdesc"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#CCF5C700"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/csl"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/teamimg"
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:layout_height="100dp"
                            android:elevation="10dp"
                            android:src="@drawable/csl"
                            android:layout_marginStart="10dp"
                            android:scaleType="fitXY"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/csldesc"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>